--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
 }
 
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.geektech.sixmonthfirtstproject"
-        minSdk 24
+        applicationId "com.example.lesson1homework"
+        minSdk 21
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -41,7 +41,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation "androidx.viewpager2:viewpager2:view_pager_version"
 }
